2017-XX-YY v. 1.1.0
---------------------
- dnfdragora can be installed and run into python3 
  virtualenv now
- Added Size column - github issue #62
- Added package repository info - github issue #57
- Do not exit if cancel is pressed on run transaction 
  authentication see:
  https://bugs.mageia.org/show_bug.cgi?id=20923
- Caught GLib.Error exception to avoid a crash, see
  https://bugs.mageia.org/show_bug.cgi?id=20975
- Added answer always yes to user preferences
. New dnfdragora-updater notifier (besser82)
- Added Option Menu and User preferences dialog
- Group caching (Fedora) is invoked only when needed now
- Managed showing by all or groups and filtering (to_update, 
  install,...) at start up, from user preferences
- Added user preferences configuration file

2017-04-14 v. 1.0.1
---------------------
- Install all sizes of the dnfdragora logo
- Added a workaround for exceeded recursion depth, 
  fixing #16
- Added man pages
- Added installation documentation (README section)
- Fixed dnf-2.2.0 missing dbus signal
- Added desktop file to handle local RPM installation
- Added "--exit" command line option to clean up dnf 
  connection in case of a previous crash
- Added "--install" command line option to be used in a
  desktop mime type
- Workaround to libyui-ncurses github issue 55, tree 
  items shown twice
- Caught exception if network is not active at first 
  run
- Fixed long time startup in Fedora where backend 
  was initialized before GUI
- Added a dialog to show the error message on exit
  in case of known exception

2017-02-19 v. 1.0.0
---------------------
first release