@@ -1,5 +1,6 @@
 2017-XX-YY v. 1.1.0
 ---------------------
+- added history view
 - dnfdragora can be installed and run into python3 
   virtualenv now
 - Added Size column - github issue #62
